--- a/akhiro_config.json
+++ b/akhiro_config.json
@@ -1,14 +1,10 @@
 {
-  "botName": "AkhiroBot",
+  "botName": "Justine ChatBot",
   "botPrefix": "/",
-  "botOwner": "AkhiroDev",
-  "contact": "https://facebook.com/certainly.francis",
-  "botDev": "AkhiroDev & Yu3Bot & LiANE",
+  "botOwner": "Justine Beloira ",
+  "contact": "Facebook Account: Justine Beloira ",
+  "botDev": "JustineDev",
   "botAdmins": [
-    "100034065047763",
-    "100075058221244",
-    "61554222594723",
-    "100054298824923",
-    "100089041723426"
+    "100090460245018",
   ]
 }
