--- a/akhiro_config.json
+++ b/akhiro_config.json
@@ -1,11 +1,11 @@
 {
-  "botName": "𝑪𝒉𝒖𝒓𝒄𝒉𝒊𝒍𝒍𝒃𝒐𝒕",
-  "botPrefix": "!",
-  "botOwner": "𝐜𝐡𝐮𝐫𝐜𝐡𝐢𝐥𝐥𝐝𝐞𝐯",
-  "contact": "https://www.facebook.com/Churchill.Dev4100",
-  "botDev": "𝘤𝘩𝘶𝘳𝘤𝘩𝘪𝘭𝘭",
+  "botName": "Justine ChatBot ",
+  "botPrefix": "/",
+  "botOwner": "Justine Beloira ",
+  "contact": "https://www.facebook.com/profile.php?id=100090460245018",
+  "botDev": "Justine",
   "botAdmins": [
-    "100087212564100",
+    "100090460245018",
     "",
     "",
     "",
