--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100088578891246%22%3A%22J4Tmt7fN%22%2C%2261553928966993%22%3A%22eSEDRb5y%22%2C%2261560537448158%22%3A%227xpuEXXW%22%2C%22100087646465792%22%3A%222ke8iTIj%22%7D",
+        "value": "%7B%22100088578891246%22%3A%22J4Tmt7fN%22%2C%2261553928966993%22%3A%22eSEDRb5y%22%2C%2261560537448158%22%3A%227xpuEXXW%22%2C%22100087646465792%22%3A%222ke8iTIj%22%2C%2261560256436495%22%3A%22uahpV2nB%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     },
     {
         "key": "ps_l",
@@ -50,71 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.8275419473648071",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "wd",
-        "value": "395x732",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "fr",
-        "value": "0WYeqL0s7Wq83wf5B.AWWtwlARP9cnNDNjdsU9LeXR-qw.Bmgb3R..AAA.0.0.Bmgb9y.AWX_CXWeCvE",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100087646465792",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "xs",
-        "value": "25%3AOaxG9BPi_vAmdQ%3A2%3A1719779186%3A-1%3A7939",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2547%3Btimestamp%3A1719779190",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100632238%3BT%3A28662986",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     },
     {
         "key": "vpd",
@@ -122,7 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-30T20:26:42.687Z",
-        "lastAccessed": "2024-06-30T20:26:42.687Z"
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.8275419473648071",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "wd",
+        "value": "395x732",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "fr",
+        "value": "0WYeqL0s7Wq83wf5B.AWUtiYVmtmg4rQ7131Hx58vBbso.Bmgb3R..AAA.0.0.BmgcOo.AWWIY85mSdU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61560256436495",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "xs",
+        "value": "27%3Alyp_ATVSnLLDlw%3A2%3A1719780265%3A-1%3A7866",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100639568%3BT%3A28663004",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2547%3Btimestamp%3A1719780269",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-30T20:44:34.088Z",
+        "lastAccessed": "2024-06-30T20:44:34.088Z"
     }
 ]
